--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </div>
   </div>
 
+        <img src="/Users/pat/workspace/calc/images/canard.jpg"/>
+
   <script src="calc.js"></script>
   <script src="script.js"></script>
 </body>
