fix broken link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-        <img src="/Users/pat/workspace/calc/images/canard.jpg"/>
+        <img src="images/canard.jpg"/>
 
   <script src="calc.js"></script>
   <script src="script.js"></script>
